test/fail/invalidfn.min
program
    number x := 3
start
    x(10);
end
